--- a/2021-04-03-todoList/index.html
+++ b/2021-04-03-todoList/index.html
@@ -10,24 +10,26 @@
     <title>Todo List</title>
 </head>
 <body>
-    <header>
-        <h1>Todo List</h1>
-    </header>
-    <form>
-        <input type="text" class="todo-input">
-        <button class="todo-button" type="submit">
-            <i class="fas fa-plus-square"></i>
-        </button>
-        <div class="select">
-            <select name="todos" class="filter-todo">
-                <option value="all">All</option>
-                <option value="completed">Completed</option>
-                <option value="uncompleted">Uncompleted</option>
-            </select>
+    <div class="wrap">
+        <header>
+            <h1>Todo List</h1>
+        </header>
+        <form>
+            <input type="text" class="todo-input">
+            <button class="todo-button" type="submit">
+                <i class="fas fa-plus-square"></i>
+            </button>
+            <div class="select">
+                <select name="todos" class="filter-todo">
+                    <option value="all">All</option>
+                    <option value="completed">Completed</option>
+                    <option value="uncompleted">Uncompleted</option>
+                </select>
+            </div>
+        </form>
+        <div class="todo-container">
+            <ul class="todo-list"></ul>
         </div>
-    </form>
-    <div class="todo-container">
-        <ul class="todo-list"></ul>
     </div>
     <script src="./app.js"></script>
 </body>
