--- a/2021-04-07-musicApp/index.html
+++ b/2021-04-07-musicApp/index.html
@@ -7,6 +7,7 @@
         <title>Document</title>
         <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="./style.css">
+        <script src="./index.js"></script>
     </head>
     <body>
         <div class="app">
@@ -14,25 +15,25 @@
                 <h1>Tap Music</h1>
                 <p>Make music with only one tap</p>
             </header>
-            <div class="visual"><h1>Visual</h1></div>
+            <div class="visual"></div>
             <div class="pads">
                 <div class="pad1">
-                    <audio src="./sounds/bubbles.mp3"></audio>
+                    <audio class="sound" src="./sounds/bubbles.mp3"></audio>
                 </div>
                 <div class="pad2">
-                    <audio src="./sounds/clay.mp3"></audio>
+                    <audio class="sound" src="./sounds/clay.mp3"></audio>
                 </div>
                 <div class="pad3">
-                    <audio src="./sounds/confetti.mp3"></audio>
+                    <audio class="sound" src="./sounds/confetti.mp3"></audio>
                 </div>
                 <div class="pad4">
-                    <audio src="./sounds/glimmer.mp3"></audio>
+                    <audio class="sound" src="./sounds/glimmer.mp3"></audio>
                 </div>
                 <div class="pad5">
-                    <audio src="./sounds/moon.mp3"></audio>
+                    <audio class="sound" src="./sounds/moon.mp3"></audio>
                 </div>
                 <div class="pad6">
-                    <audio src="./sounds/ufo.mp3"></audio>
+                    <audio class="sound" src="./sounds/ufo.mp3"></audio>
                 </div>
             </div>
         </div>
