날씨 앱 구현 완료

--- a/2021-04-08-weatherApp/index.html
+++ b/2021-04-08-weatherApp/index.html
@@ -14,12 +14,12 @@
             </header>
             <main>
                 <section class="location">
-                    <div class="city">Seoul</div>
-                    <div class="date">2021년 4월 8일 목요일</div>
+                    <div class="city"></div>
+                    <div class="date"></div>
                     <div class="current">
-                        <div class="temp">15<span>˚C</span></div>
-                        <div class="weather">맑음</div>
-                        <div class="hi-low">13˚C / 16˚C</div>
+                        <div class="temp"><span></span></div>
+                        <div class="weather"></div>
+                        <div class="hi-low"></div>
                     </div>
                 </section>
             </main>
